--- a/the original project files/dashbord_user.html
+++ b/the original project files/dashbord_user.html
@@ -13,18 +13,25 @@
   <link rel="stylesheet" href="style.css"/>
   <style>
     body.user-template-scope {
-      --glass-bg: rgba(12, 22, 18, 0.55);
-      --glass-bg-2: rgba(80, 255, 200, 0.06);
-      --glass-border: rgba(160, 255, 220, 0.18);
-      --glass-border-strong: rgba(190, 255, 230, 0.28);
+      --accent: GREEN_HEX_HERE;
+      --accent-soft: color-mix(in srgb, var(--accent) 22%, transparent);
+      --accent-border: color-mix(in srgb, var(--accent) 32%, transparent);
+      --accent-strong: color-mix(in srgb, var(--accent) 48%, transparent);
+      --glass-bg: rgba(12, 22, 18, 0.5);
+      --glass-bg-2: rgba(80, 255, 200, 0.08);
+      --glass-border: color-mix(in srgb, var(--accent) 18%, transparent);
+      --glass-border-strong: color-mix(in srgb, var(--accent) 28%, transparent);
       --glass-shadow: 0 18px 40px rgba(3, 8, 12, 0.6);
       --glass-blur: 16px;
       --glass-sat: 155%;
       --glass-highlight: linear-gradient(135deg, rgba(255, 255, 255, 0.12), rgba(120, 255, 210, 0.04));
       --glass-text: #e6f7f2;
       --glass-muted: rgba(230, 247, 242, 0.7);
+      --emerald: var(--accent);
+      --emerald-light: var(--accent);
+      --success: var(--accent);
       background:
-        radial-gradient(900px 500px at 25% 0%, rgba(40, 255, 170, 0.16), transparent 55%),
+        radial-gradient(900px 500px at 25% 0%, color-mix(in srgb, var(--accent) 18%, transparent), transparent 55%),
         radial-gradient(700px 500px at 20% 85%, rgba(255, 170, 90, 0.1), transparent 60%),
         radial-gradient(700px 500px at 60% 75%, rgba(160, 120, 255, 0.08), transparent 60%),
         linear-gradient(180deg, #0a1410 0%, #07100c 100%);
@@ -161,11 +168,80 @@
       padding: 30px 30px 30px 22px;
     }
 
+    body.user-template-scope .btn-primary,
+    body.user-template-scope .btn-success {
+      background-color: var(--accent) !important;
+      border-color: var(--accent) !important;
+      color: #f7fffb;
+    }
+
+    body.user-template-scope .btn-primary:hover,
+    body.user-template-scope .btn-success:hover {
+      filter: brightness(1.06);
+    }
+
+    body.user-template-scope .btn-primary:focus,
+    body.user-template-scope .btn-success:focus,
+    body.user-template-scope .btn-primary:active,
+    body.user-template-scope .btn-success:active {
+      box-shadow: 0 0 0 0.2rem color-mix(in srgb, var(--accent) 40%, transparent);
+    }
+
+    body.user-template-scope .text-success,
+    body.user-template-scope .text-success-emphasis {
+      color: var(--accent) !important;
+    }
+
+    body.user-template-scope .bg-success,
+    body.user-template-scope .badge.bg-success {
+      background-color: var(--accent) !important;
+      border-color: var(--accent) !important;
+      color: #0b1511 !important;
+    }
+
+    body.user-template-scope .bg-success-subtle,
+    body.user-template-scope .badge.bg-success-subtle {
+      background-color: color-mix(in srgb, var(--accent) 16%, transparent) !important;
+      border-color: color-mix(in srgb, var(--accent) 35%, transparent) !important;
+      color: #f7fffb !important;
+    }
+
+    body.user-template-scope .progress-bar.bg-success {
+      background-color: var(--accent) !important;
+    }
+
+    body.user-template-scope .btn-outline-primary {
+      color: var(--accent) !important;
+      border-color: var(--accent) !important;
+    }
+
+    body.user-template-scope .btn-outline-primary:hover,
+    body.user-template-scope .btn-outline-primary:focus {
+      background-color: color-mix(in srgb, var(--accent) 16%, transparent) !important;
+      color: #f7fffb !important;
+    }
+
+    body.user-template-scope .form-control:focus,
+    body.user-template-scope .form-select:focus,
+    body.user-template-scope .form-check-input:focus {
+      border-color: var(--accent);
+      box-shadow: 0 0 0 0.2rem color-mix(in srgb, var(--accent) 35%, transparent);
+    }
+
+    body.user-template-scope .form-check-input:checked {
+      background-color: var(--accent);
+      border-color: var(--accent);
+    }
+
+    body.user-template-scope .nav-btn:hover {
+      border-color: var(--accent);
+    }
+
     body.user-template-scope .alert {
       border-radius: 14px;
       padding: 14px 16px;
       margin-bottom: 14px;
-      border: 1px solid rgba(160, 255, 220, 0.18);
+      border: 1px solid var(--glass-border);
       background: rgba(12, 22, 18, 0.28) !important;
       color: rgba(255, 255, 255, 0.92);
     }
@@ -189,7 +265,7 @@
     body.user-template-scope .alert-success,
     body.user-template-scope .alert-warning,
     body.user-template-scope .alert-danger {
-      border-color: rgba(160, 255, 220, 0.18) !important;
+      border-color: var(--glass-border) !important;
       background: rgba(12, 22, 18, 0.28) !important;
       color: rgba(255, 255, 255, 0.92) !important;
     }
@@ -203,7 +279,7 @@
     }
 
     body.user-template-scope .pagination .page-link {
-      border: 1px solid rgba(160, 255, 220, 0.18);
+      border: 1px solid var(--glass-border);
       border-radius: 999px;
       padding: 6px 14px;
       min-width: 36px;
@@ -216,20 +292,94 @@
 
     body.user-template-scope .pagination .page-link:hover {
       color: #f7fffb;
-      border-color: rgba(160, 255, 220, 0.35);
+      border-color: var(--glass-border-strong);
       background: rgba(12, 22, 18, 0.32) !important;
     }
 
     body.user-template-scope .pagination .page-item.active .page-link,
     body.user-template-scope .pagination .page-link.active {
       color: #f7fffb;
-      border-color: rgba(190, 255, 230, 0.45);
-      background: rgba(80, 255, 200, 0.12) !important;
+      border-color: color-mix(in srgb, var(--accent) 45%, transparent);
+      background: color-mix(in srgb, var(--accent) 16%, transparent) !important;
       box-shadow: 0 10px 18px rgba(3, 8, 12, 0.35);
     }
 
     body.user-template-scope .pagination .page-link:focus {
-      box-shadow: 0 0 0 2px rgba(120, 255, 210, 0.18);
+      box-shadow: 0 0 0 2px color-mix(in srgb, var(--accent) 40%, transparent);
+    }
+
+    body.user-template-scope .sidebar {
+      height: 100vh;
+      display: flex;
+      flex-direction: column;
+    }
+
+    body.user-template-scope .nav-menu {
+      flex: 1;
+      display: flex;
+      flex-direction: column;
+      gap: 22px;
+    }
+
+    body.user-template-scope .account-link {
+      display: flex;
+      align-items: center;
+      gap: 12px;
+    }
+
+    body.user-template-scope .account-link .user-avatar {
+      width: 44px;
+      height: 44px;
+      border-radius: 50%;
+      border: 2px solid color-mix(in srgb, var(--accent) 45%, transparent);
+      object-fit: cover;
+    }
+
+    body.user-template-scope .account-details {
+      display: flex;
+      flex-direction: column;
+    }
+
+    body.user-template-scope .account-balance {
+      padding: 10px 18px 4px;
+      color: rgba(255, 255, 255, 0.65);
+    }
+
+    body.user-template-scope .account-balance-label {
+      font-size: 0.85rem;
+      color: rgba(255, 255, 255, 0.55);
+    }
+
+    body.user-template-scope .account-balance-value {
+      font-weight: 600;
+      color: var(--accent) !important;
+    }
+
+    body.user-template-scope .account-logout {
+      color: rgba(255, 255, 255, 0.7) !important;
+    }
+
+    body.user-template-scope .account-logout:hover {
+      color: #f7fffb !important;
+    }
+
+    body.user-template-scope .activity-list {
+      display: flex;
+      flex-direction: column;
+      gap: 0;
+    }
+
+    body.user-template-scope .activity-list .alert {
+      margin: 0;
+      border: none;
+      border-radius: 0;
+      padding: 14px 2px;
+      background: transparent !important;
+      border-bottom: 1px solid var(--glass-border);
+    }
+
+    body.user-template-scope .activity-list .alert:last-child {
+      border-bottom: none;
     }
   </style>
 </head>
@@ -335,15 +485,6 @@
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" data-bs-toggle="pill" href="#Profil">
-                <svg class="nav-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                  <circle cx="12" cy="12" r="3"/>
-                  <path d="M19.4 15a1.65 1.65 0 0 0 .33 1.82l.06.06a2 2 0 0 1 0 2.83 2 2 0 0 1-2.83 0l-.06-.06a1.65 1.65 0 0 0-1.82-.33 1.65 1.65 0 0 0-1 1.51V21a2 2 0 0 1-2 2 2 2 0 0 1-2-2v-.09A1.65 1.65 0 0 0 9 19.4a1.65 1.65 0 0 0-1.82.33l-.06.06a2 2 0 0 1-2.83 0 2 2 0 0 1 0-2.83l.06-.06a1.65 1.65 0 0 0 .33-1.82 1.65 1.65 0 0 0-1.51-1H3a2 2 0 0 1-2-2 2 2 0 0 1 2-2h.09A1.65 1.65 0 0 0 4.6 9a1.65 1.65 0 0 0-.33-1.82l-.06-.06a2 2 0 0 1 0-2.83 2 2 0 0 1 2.83 0l.06.06a1.65 1.65 0 0 0 1.82.33H9a1.65 1.65 0 0 0 1-1.51V3a2 2 0 0 1 2-2 2 2 0 0 1 2 2v.09a1.65 1.65 0 0 0 1 1.51 1.65 1.65 0 0 0 1.82-.33l.06-.06a2 2 0 0 1 2.83 0 2 2 0 0 1 0 2.83l-.06.06a1.65 1.65 0 0 0-.33 1.82V9a1.65 1.65 0 0 0 1.51 1H21a2 2 0 0 1 2 2 2 2 0 0 1-2 2h-.09a1.65 1.65 0 0 0-1.51 1z"/>
-                </svg>
-                Profil
-              </a>
-            </li>
-            <li class="nav-item">
               <a class="nav-link" data-bs-toggle="pill" href="#trading">
                 <svg class="nav-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                   <rect x="3" y="3" width="7" height="7" rx="1"/>
@@ -375,17 +516,36 @@
             </li>
           </ul>
         </li>
+        <li class="nav-section">
+          <span class="nav-section-title">Account</span>
+          <ul>
+            <li class="nav-item account-item">
+              <a class="nav-link account-link" data-bs-toggle="pill" href="#Profil">
+                <img alt="Image Utilisateur" class="user-avatar" src=""/>
+                <div class="account-details">
+                  <div class="user-name" id="sidebarName">---</div>
+                  <div class="user-role" id="memberSince">Utilisateur</div>
+                </div>
+              </a>
+              <span class="visually-hidden" id="nameincompte">---</span>
+            </li>
+            <li class="nav-item account-balance">
+              <div class="account-balance-label">Solde total</div>
+              <div class="account-balance-value text-success" id="accountBalance">$12,500.00</div>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link account-logout" href="#" onclick="logout()">
+                <svg class="me-2" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" width="18" height="18">
+                  <path d="M9 21H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h4"/>
+                  <polyline points="16 17 21 12 16 7"/>
+                  <line x1="21" y1="12" x2="9" y2="12"/>
+                </svg>
+                Se déconnecter
+              </a>
+            </li>
+          </ul>
+        </li>
       </ul>
-
-      <div class="sidebar-footer">
-        <div class="user-profile">
-          <img alt="Image Utilisateur" class="user-avatar" src=""/>
-          <div class="user-info">
-            <div class="user-name" id="sidebarName">---</div>
-            <div class="user-role" id="memberSince">Utilisateur</div>
-          </div>
-        </div>
-      </div>
     </aside>
 
     <main class="main-content">
@@ -453,36 +613,6 @@
               <li><a class="dropdown-item active" href="#" onclick="changeLanguage('ar')"><i class="fas fa-check me-2"></i> Français</a></li>
               <li><a class="dropdown-item" href="#" onclick="changeLanguage('en')">English</a></li>
               <li><a class="dropdown-item" href="#" onclick="changeLanguage('ar')">Arabe</a></li>
-            </ul>
-          </div>
-          <div class="dropdown">
-            <button aria-expanded="false" class="nav-btn" data-bs-toggle="dropdown" id="accountDropdown" type="button">
-              <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                <path d="M20 21v-2a4 4 0 0 0-4-4H8a4 4 0 0 0-4 4v2"/>
-                <circle cx="12" cy="7" r="4"/>
-              </svg>
-            </button>
-            <ul aria-labelledby="accountDropdown" class="dropdown-menu dropdown-menu-end" style="min-width: 250px;">
-              <li class="dropdown-header text-center">
-                <img alt="Image Utilisateur" class="rounded-circle mb-2 user-avatar" src="" style="width: 60px; height: 60px;"/>
-                <div class="fw-bold" id="nameincompte">---</div>
-              </li>
-              <li><hr class="dropdown-divider"/></li>
-              <li class="px-3 py-2">
-                <div class="text-muted small">Solde total</div>
-                <div class="fw-bold text-success" id="accountBalance">$12,500.00</div>
-              </li>
-              <li><hr class="dropdown-divider"/></li>
-              <li>
-                <a class="dropdown-item text-danger" href="#" onclick="logout()">
-                  <svg class="me-2" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" width="18" height="18">
-                    <path d="M9 21H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h4"/>
-                    <polyline points="16 17 21 12 16 7"/>
-                    <line x1="21" y1="12" x2="9" y2="12"/>
-                  </svg>
-                  Se déconnecter
-                </a>
-              </li>
             </ul>
           </div>
         </div>
