--- a/the original project files/dashbord_user.html
+++ b/the original project files/dashbord_user.html
@@ -25,6 +25,38 @@
       background: var(--bg);
       color: var(--text);
       min-height: 100vh;
+      position: relative;
+    }
+
+    body.user-template-scope::before {
+      content: "";
+      position: fixed;
+      inset: 0;
+      background:
+        radial-gradient(900px 520px at 18% 6%, rgba(124, 37, 239, 0.20), transparent 62%),
+        radial-gradient(760px 460px at 82% 12%, rgba(124, 37, 239, 0.14), transparent 64%),
+        radial-gradient(640px 420px at 28% 68%, rgba(160, 120, 255, 0.12), transparent 66%),
+        radial-gradient(700px 520px at 72% 86%, rgba(124, 37, 239, 0.12), transparent 70%),
+        radial-gradient(520px 360px at 55% 40%, rgba(170, 140, 255, 0.08), transparent 68%),
+        linear-gradient(180deg, var(--bg) 0%, var(--bg) 100%);
+      z-index: 0;
+      pointer-events: none;
+    }
+
+    body.user-template-scope::after {
+      content: "";
+      position: fixed;
+      inset: 0;
+      background: radial-gradient(520px 320px at 50% 20%, rgba(124, 37, 239, 0.10), transparent 70%);
+      filter: blur(30px);
+      opacity: 0.32;
+      z-index: 0;
+      pointer-events: none;
+    }
+
+    body.user-template-scope > * {
+      position: relative;
+      z-index: 1;
     }
 
     body.user-template-scope .glass-card,
@@ -66,6 +98,13 @@
       border: 0 !important;
       box-shadow: none !important;
       backdrop-filter: none !important;
+    }
+
+    body.user-template-scope .navbar {
+      background: transparent !important;
+      background-color: transparent !important;
+      box-shadow: none !important;
+      border-color: rgba(255, 255, 255, 0.08);
     }
 
     body.user-template-scope .main-content {
