--- a/the original project files/dashbord_user.html
+++ b/the original project files/dashbord_user.html
@@ -35,6 +35,7 @@
       z-index: 0;
       pointer-events: none;
       background:
+        url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='1200' height='800' viewBox='0 0 1200 800'%3E%3Cg fill='none'%3E%3Ccircle cx='140' cy='140' r='120' fill='rgba(184,254,8,0.12)'/%3E%3Ccircle cx='360' cy='220' r='160' fill='rgba(124,37,239,0.16)'/%3E%3Ccircle cx='980' cy='140' r='140' fill='rgba(160,120,255,0.14)'/%3E%3Ccircle cx='900' cy='420' r='200' fill='rgba(124,37,239,0.12)'/%3E%3Ccircle cx='260' cy='520' r='190' fill='rgba(184,254,8,0.08)'/%3E%3Ccircle cx='640' cy='620' r='220' fill='rgba(160,120,255,0.10)'/%3E%3Ccircle cx='1100' cy='680' r='150' fill='rgba(124,37,239,0.10)'/%3E%3C/g%3E%3C/svg%3E") center/cover no-repeat,
         radial-gradient(1000px 760px at 10% 8%, rgba(124, 37, 239, 0.08), transparent 72%),
         radial-gradient(1120px 820px at 86% 12%, rgba(124, 37, 239, 0.07), transparent 74%),
         radial-gradient(980px 740px at 22% 42%, rgba(160, 120, 255, 0.06), transparent 76%),
